2008-02-01  Martin Hunt  <hunt@redhat.com>
	PR4736
	* systemtap.printf/stap_merge.tcl: Copied here so
	it will always be available.

2008-01-31  Will Cohen <wcohen@redhat.com>

	* systemtap.pass1-4/buildok.exp: Add some kfails.

2008-01-29  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (clean-local): Allow "rm -rf" to fail due to
	root-owned .ko files in the local cache.
	* Makefile.in: Regenerated.

2008-01-26  Frank Ch. Eigler  <fche@elastic.org>

	PR 5673.
	* testsuite/parseko/maxactive{04,05}.stp: New tests.

2008-01-24  Frank Ch. Eigler  <fche@elastic.org>

	crash(8) tests, based on Masami Hiramatsu <mhiramat@redhat.com>:
	* Makefile.am (CRASH_LIBDIR): Pass in $(RUNTEST).
	* lib/systemtap.exp (as_root): Trace command string, output, and
	result.
	* systemtap.samples/crash.*, testlog.stp: New test case.
	* Makefile.in: Regenerated.

2008-01-23  Frank Ch. Eigler  <fche@elastic.org>

	PR 2521.
	* systemtap.base/debugpath.exp: New test.

2008-01-18  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Bump version to 0.6.1.
	* configure: Regenerated.

2008-01-17  Frank Ch. Eigler  <fche@elastic.org>

	PR 4935.
	* semko/forty.stp, fortyone.stp, fortytwo.stp: New tests.
	* semok/twentynine.stp: Weaken test since condition expressions have
	become more tightly constrained.

2008-01-17  David Smith  <dsmith@redhat.com>

	* semko/procfs11.stp: Added test for invalid use of procfs probe
	'$value' target variable.
	* semko/procfs12.stp: Ditto.

2008-01-16  David Smith  <dsmith@redhat.com>

	PR 5608.
	* systemtap.base/marker.exp:  Added 2 tests for treating marker
	arguments incorrectly.

2008-01-16  Eugene Teo  <eteo@redhat.com>

	* buildok/signal-embedded.stp: Add all new embedded C functions
	in signal.

2008-01-14  Frank Ch. Eigler  <fche@elastic.org>

	PR 4935.
	* systemtap.base/onoffprobe.*: Toughen test.

2008-01-12  Frank Ch. Eigler  <fche@elastic.org>

	* lib/systemtap.exp (get_system_info): Look for $builddir/SNAPSHOT too.
