@@ -1,3 +1,9 @@
+2008-02-04  David Smith  <dsmith@redhat.com>
+
+	PR 4446.
+	* systemtap.base/marker.exp: Added tests for marker "$format"
+	variable.
+
 2008-02-01  Martin Hunt  <hunt@redhat.com>
 	PR4736
 	* systemtap.printf/stap_merge.tcl: Copied here so
